# vpl

./: CMakeLists.txt  Doxyfile  LICENSE.tex  README.md  coctreevpl.cpp  coctreevpl.h  contributors.txt  evaluationresult.cpp  evaluationresult.h  evaluationresultvector.cpp  evaluationresultvector.h  main.cpp  nbvPartialModelConfig.h.in  paint_octree.cpp  partialmodelbase.cpp  partialmodelbase.h  pmdefinitions.h  pmraynode.h  pmraytree.cpp  pmraytree.h  pmutils.h  pmvoctree.cpp  pmvoctree.h  pmvoctreehierarchicalrt.cpp  pmvoctreehierarchicalrt.h  pmvoctreeig.cpp  pmvoctreevasquez14.h  pmvoctreevolume.cpp  pmvoctreevolume.h  pmvolumetric.cpp  pmvolumetric.h  raw2triangles.cpp  test_esfera_multioctree.cpp  test_esfera_octree.cpp  test_hrt.cpp  test_multires_octree.cpp  test_octree.cpp  test_partialmodel.cpp  views.h  viewstructure.cpp  (+11 more)
apps/: CMakeLists.txt  raw2msl.cpp  rssimulated.cpp  rssimulated.h  rssraytracingoctree.cpp  rssraytracingoctree.h  test_blensor_integrate.cpp  test_freeflyer.cpp  test_freeflyer_vasquez09.cpp  test_partialmodel.cpp  test_rangesimulator.cpp  test_update_partial_model.cpp  test_view_generator.cpp  test_view_sphere.cpp  vpl_apps_utils.h
data_example/FreeFlyer/config/: p0.vs  partialModelConfig.ini  plannerConfig.ini  rangeSensor.ini  rangeSimulator.ini
data_example/rrt_nbvs/config/: ArmPose  CollisionPairs  DH  GapError  GlobalCameraPosition  GoalList  GoalState  InitialState  Inputs  LowerState  LowerState_resp  LowerWorld  Means_nozero  Obst  ObstEnvi.raw  Robot0  Robot0_patrol_vertical_arm  Robot1  Robot2  Robot3  Robot4  Robot5_esfera  Robot5_kin_delgado  Sigmas  UpperState  UpperState (copy)  UpperWorld  Weights  Weights (copy)  _EnvList  _Robot5  fingers_kinect_gordo2  kinect2gordo  p0.vs  partialModelConfig.ini  patrol_updated_horizontal_arm  piso.mtl  plannerConfig.ini  rangeSensor.ini  rangeSimulator.ini  (+1 more)
data_example/update_example/config/: rangeSimulator.ini
nbvs_planning/: CMakeLists.txt  mrpt_alternatives.cpp  nbvplannerexpectedutility.cpp  nbvplannerexpectedutility.h  nbvplannerexpectedutilitynroot.cpp  nbvplannerexpectedutilitynroot.h  nbvplannerrgflt.cpp  nbvplannerrgflt.h  nbvs_utils.h  robotarmmdh.cpp  robotarmmdh.h  robotcomposed.cpp  robotcomposed.h  robotmobile.cpp  robotmobile.h  rrtnbv.cpp  rrtnbv.h  test_sim_rrtnbv.cpp  test_sim_rrtnbv_Kriegel.cpp  test_sim_rrtnbv_fig.cpp  test_sim_rrtnbv_if.cpp  test_sim_rrtnbv_rearside.cpp  test_uav_ort.cpp  vp_simulation_example.cpp
partialmodel/: CMakeLists.txt  coctreevpl.cpp  coctreevpl.h  evaluationresult.cpp  evaluationresult.h  partialmodelbase.cpp  partialmodelbase.h  partialmodels.h  pmraynode.cpp  pmraytree.cpp  pmutils.cpp  pmutils.h  pmvoctree.cpp  pmvoctree.h  pmvoctreeig.cpp  pmvoctreeig.h  pmvoctreeigkriegel12.cpp  pmvoctreeigkriegel12.h  pmvoctreeoccusionaware.cpp  pmvoctreeoccusionaware.h  pmvoctreevasquez09.cpp  pmvoctreevasquez09.h  pmvoctreevasquez14.cpp  pmvoctreevolume.cpp  pmvoctreevolume.h  pmvolumetric.cpp  pmvolumetric.h  pmvorearsidevoxel.cpp  pmvorearsidevoxel.h  test_esfera_multioctree.cpp  test_octree.cpp  test_partialmodel.cpp  test_view_generator.cpp  test_view_sphere.cpp  views.h  viewstructure.cpp  viewstructure.h  viewsynthesis.cpp  viewsynthesis.h  volumetricutilityfunction.h  (+6 more)
partialmodel/deprecated/: evaluationresultvector.cpp  evaluationresultvector.h  main_old.cpp  paint_octree.cpp  volumetricutilityfunction.cpp  volumetricutilityfunction.h  vufobjectfilters.cpp
partialmodel_hrt/: pmraytree.h  pmvoctreehierarchicalrt.h  test_hrt.cpp  test_multires_octree.cpp
rangesimulator/: CMakeLists.txt  rangesimulatorbase.cpp  rangesimulatorbase.h  rangesimulatoroctree.cpp  rangesimulatoroctree.h  recbenchmarklist.cpp  recbenchmarklist.h  reconstructionbenchmark.cpp  reconstructionbenchmark.h  rssraytracingoctree.cpp  rssraytracingoctree.h
viewplanning/: CMakeLists.txt  NBVplannerSynthesis.txt  nbvplanner.cpp  nbvplanner.h  r3ddirectpositioning.cpp  r3ddirectpositioning.h  rangesensor.cpp  rangesensor.h  reconstructor3d.cpp  reconstructor3d.h  robotsensor.cpp  robotsensor.h  robsennotransformation.cpp  robsennotransformation.h  rsblensor.cpp  rsblensor.h  spheregenerator.cpp  spheregenerator.h  vp.h  vpdefinitions.h  vplutils.cpp  vplutils.h  vprfreeflyer.cpp  vprfreeflyer.h  vprobot.cpp  vprobot.h  workspacenbvplanner.cpp  workspacenbvplanner.h
